Fixed image height so they wouldn't stretch as bad

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -15,6 +15,9 @@ body {
   font-family: 'Ubuntu', sans-serif;
 }
 
+#restaurant {
+  margin-top: -7px;
+}
 
 #like {
   height: 500px;
@@ -31,15 +34,21 @@ body {
 .card-image {
   height: 300px;
   background-size: cover;
+  background-color: #9C260B;
+  z-index: -1;
 }
 
 img {
-  height: 300px;
+  max-height: 300px;
 }
 
 .card .card-content {
   height: 200px;
+  background-color: #9C260B;
+}
 
+.card {
+  z-index: -3;
 }
 
 @media only screen and (max-width: 600px) {
@@ -58,6 +67,17 @@ a {
 
 #favorites {
   background-color: #2BC6DA;
+  z-index: -4;
+  position: relative;
+}
+
+#liked-row {
+  z-index: -5;
+
+}
+
+#liked-row .card-image {
+  height: 200px;
 }
 
 #dislike {
@@ -80,9 +100,9 @@ a {
 .close {
   height: 70px;
   width: 70px;
-  top: 10px;
-  right: 10px;
+  top: 5px;
+  right: 5px;
   position: absolute;
   cursor: pointer;
+  z-index: 2;
 }
-
